--- a/front/index.html
+++ b/front/index.html
@@ -19,10 +19,10 @@
 
   <body>
 
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-2">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -30,113 +30,41 @@
           </button>
           <a class="navbar-brand" href="#">ბიბლიოთეკა</a>
         </div>
-        <div id="navbar" class="collapse navbar-collapse">
+
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">მთავარი</a></li>
-            <li><a href="search.html">ძებნა</a></li>
-            <li><a href="contact.html">კონტაქტი</a></li>
+            <li class="active"><a href="#">წიგნები</a></li>
+            <li><a href="#">მომხმარებლები</a></li>
           </ul>
+          <form class="navbar-form navbar-left" role="search">
+            <div class="form-group">
+              <input type="text" class="form-control" placeholder="">
+            </div>
+            <button type="submit" class="btn btn-default">ძებნა</button>
+          </form>
           <ul class="nav navbar-nav navbar-right">
-          <li><a href="#"data-toggle="modal" data-target="#myModal">შესვლა</a></li>
+            <li><a href="#">გამოსვლა</a></li>
           </ul>
-        </div><!--/.nav-collapse -->
+        </div>
       </div>
     </nav>
-
-    <!-- Modal -->
-      <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-              <h4 class="modal-title" id="myModalLabel">Login</h4>
-            </div>
-            <div class="modal-body">
-             <form>
-              <div class="form-group">
-                <label for="exampleInputEmail1">Email address</label>
-                <input type="email" class="form-control" placeholder="Email">
-              </div>
-              <div class="form-group">
-                <label for="exampleInputPassword1">Password</label>
-                <input type="password" class="form-control"  placeholder="Password">
-              </div>
-            </form>
-            </div>
-            <div class="modal-footer">
-              <button type="submit" class="btn btn-default">Submit</button>
-            </div>
-          </div>
-        </div>
-      </div>
-
     <section>
-      <div id="myCarousel" class="carousel slide" data-ride="carousel">
-        <!-- Indicators -->
-        <ol class="carousel-indicators">
-          <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-          <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-          <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-        </ol>
-
-        <!-- Wrapper for slides -->
-        <div class="carousel-inner" role="listbox">
-          <div class="item active">
-            <img src="img/1.jpg">
-            <div class="carousel-caption">
-              <div class = "row">
-                <div class = "col-md-6">
-                  <h1>1000000-ე მეტი წიგნი</h1>
-                  <p>გვაქვს უამრავი მხატვრული და ტექნიკური ლიტერატურის წიგნები რომელთა ნახვაც შეგიძლიათ   online, და შემდგომ გაიტანოთ და წაიკითხოთ ჩვენს ბიბლიოთეკაში</p>
-                </div>
-              </div>
-            </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <div class="list-group">
+            <a href="#" class="list-group-item active">წიგნები</a>
+            <a href="#" class="list-group-item">მომხმარებლები</a>
+          </div>   
           </div>
-          <div class="item">
-            <img src="img/22.jpg">
-            <div class="carousel-caption">
-              <div class = "row">
-                <div class = "col-md-6">
-                  <h1>მწვიდი, კომფორტული გარემო</h1>
-                  <p>მშვიდი ადგილი კომფორტულული სკამებით და მაგიდებით შეგიქმნით იდეალურ გარემოს როგორც სასწავლად ასევე სამუშაოდ ან უბრალოდ განსატვირთად</p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="item">
-            <img src="img/3.jpg">
-            <div class="carousel-caption">
-               <div class = "row">
-                <div class = "col-md-6">
-                  <h1>მობრზანდით</h1>
-                  <p><span class="glyphicon glyphicon-ok"></span>უამრავი წიგნი</p>
-                  <p><span class="glyphicon glyphicon-ok"></span>წიგნის ებნა ონლაინ</p>
-                  <p><span class="glyphicon glyphicon-ok"></span>სასიამოვნო გარემო</p>
-                  <p><span class="glyphicon glyphicon-ok"></span>პროფესიონალი პერსონალი</p>
-                </div>
-              </div>
-            </div>
+          <div class="col-md-8">
+            
           </div>
         </div>
-
-        <!-- Controls -->
-        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-          <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-          <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
       </div>
+
 
     </section>
-
-    <footer>
-      <div class = "container">
-        <p>თსუ ბიბლიოთეკა &copy</p> 
-      </div>
-    </footer>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
