--- a/public/login.html
+++ b/public/login.html
@@ -29,10 +29,10 @@
 
       <form class="form-signin" action="index.html">
         <h2 class="form-signin-heading text-center ">ბიბლიოთეკა</h2>
-        <label for="inputEmail" class="sr-only">Email address</label>
-        <input type="email" id="inputEmail" class="form-control" placeholder="მეილი" required autofocus>
+        <label for="inputEmail" class="sr-only">Username</label>
+        <input name="username" type="text" id="inputEmail" class="form-control" placeholder="მომხმარებელი" required autofocus>
         <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" id="inputPassword" class="form-control" placeholder="პაროლი" required>
+        <input  name="password" type="password" id="inputPassword" class="form-control" placeholder="პაროლი" required>
         <div class="checkbox">
           <label>
             <input type="checkbox" value="remember-me"> დამახსოვრება
@@ -44,7 +44,7 @@
     </div> <!-- /container -->
 
 
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="js/bootstrap.js"></script>
   </body>
 </html>
