--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
             <button type="submit" class="btn btn-default">ძებნა</button>
           </form>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">გამოსვლა</a></li>
+            <li><a href="login.html">გამოსვლა</a></li>
           </ul>
         </div>
       </div>
@@ -69,7 +69,7 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.js"></script>
   </body>
 </html>
