added return book

--- a/public/index.html
+++ b/public/index.html
@@ -4,20 +4,16 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
 
     <title>თსუ ბიბლიოთეკა</title>
 
-    <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
-    <!-- Custom styles for this template -->
     <link href="css/style.css" rel="stylesheet">
 
     <link href="css/star-rating.css" media="all" rel="stylesheet" type="text/css"/>
 
-    <!-- Placed at the end of the document so the pages load faster -->
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/star-rating.js" type="text/javascript"></script>
@@ -58,9 +54,6 @@
 <div class="container">
     <button type="button" class="btn btn-primary btn" onclick="addBookModal()">
         დამატება
-    </button>
-    <button type="button" class="btn btn-primary btn" onclick="openReturnBook()">
-        დაბრუნება
     </button>
     <table id="grid-data" class="table table-bordered">
         <thead>
@@ -206,13 +199,13 @@
                     <div class="form-group">
                         <label for="title" class="col-sm-2 control-label">ISBN</label>
                         <div class="col-sm-10">
-                            <input disabled type="text" class="form-control" placeholder="ISBN">
+                            <input disabled id="rbisbn" type="text" class="form-control" placeholder="ISBN">
                         </div>
                     </div>
                     <div class="form-group">
                         <label for="author" class="col-sm-2 control-label">კოდი</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" placeholder="კოდი">
+                            <input id="rbcode" type="text" class="form-control" placeholder="კოდი">
                         </div>
                     </div>
                     <div class="form-group">
@@ -225,7 +218,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">გაუქმება</button>
-                <button type="button" class="btn btn-primary" onclick="takeBook()">გატანა</button>
+                <button type="button" class="btn btn-primary" onclick="returnBook()">დაბრუნება</button>
             </div>
         </div>
     </div>
@@ -247,17 +240,24 @@
                     row.appendChild(td);
                 }
                 var td = document.createElement('td');
-                td.innerHTML = '<button type="button" class="btn btn-success btn-xs" onclick="openTakeBook(\'' + data[i].isbn + '\')">\
-                        <span class="glyphicon glyphicon glyphicon-home" aria-hidden="true"></span>\
+                td.innerHTML = '<button type="button" title="დაბრუნება" data-placement="top" data-toggle="tooltip" class="btn btn-success btn-xs" onclick="openReturnBook(\'' + data[i].isbn + '\')">\
+                        <span class="glyphicon glyphicon glyphicon glyphicon-home" aria-hidden="true"></span>\
                         </button>\
-                        <button type="button" class="btn btn-primary btn-xs" onclick="editBook(\'' + data[i]._id + '\')">\
+                        <button type="button" title="გატანა" data-placement="top" data-toggle="tooltip" class="btn btn-warning btn-xs" onclick="openTakeBook(\'' + data[i].isbn + '\')">\
+                        <span class="glyphicon glyphicon glyphicon glyphicon-send" aria-hidden="true"></span>\
+                        </button>\
+                        <button type="button" title="რედაქტირება" data-placement="top" data-toggle="tooltip" class="btn btn-primary btn-xs" onclick="editBook(\'' + data[i]._id + '\')">\
                         <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>\
                         </button>\
-                        <button type="button" class="btn btn-danger btn-xs" onclick="deleteBook(\'' + data[i].isbn + '\')">\
+                        <button type="button" title="წაშლა" data-placement="top" data-toggle="tooltip" class="btn btn-danger btn-xs" onclick="deleteBook(\'' + data[i].isbn + '\')">\
                         <span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span>\
                         </button>';
                 row.appendChild(td);
                 table.appendChild(row);
+
+                $(function () {
+                    $('[data-toggle="tooltip"]').tooltip()
+                })
             }
         });
 
@@ -327,7 +327,25 @@
             object[fields[i].name] = tempField;
         }
 
-        $.post("books/takeBook", object, function () {
+        $.post("books/takeBook", object, function (response) {
+            var data = JSON.parse(response)
+            prompt('გატანილი წიგნის კოდია:\n' + data.code)
+            location.reload()
+        });
+    }
+
+    function returnBook() {
+        var fields = [
+            {id: "rbisbn", name: "isbn"}, {id: "rbcode", name: "takeOperationCode"}];
+        var object = {};
+        for (var i in fields) {
+            var tempField = document.getElementById(fields[i].id).value;
+            object[fields[i].name] = tempField;
+        }
+
+        object.grade = parseInt($('#stars').val());
+
+        $.post("books/returnBook", object, function () {
             location.reload()
         });
     }
@@ -338,8 +356,9 @@
         $("#myModal").modal();
     }
 
-    function openReturnBook() {
+    function openReturnBook(isbn) {
         $("#returnBookModal").modal();
+        $('#rbisbn').val(isbn)
     }
 </script>
 </body>
